--- a/Menu.xaml
+++ b/Menu.xaml
@@ -1,80 +1,96 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"  
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"  
-             xmlns:localization="clr-namespace:LocalizationResourceManager.Maui;assembly=LocalizationResourceManager.Maui"
-             x:Class="PCANAppM.Menu" 
-             BackgroundColor="Black">  
-    <Grid RowDefinitions="Auto,*,Auto" ColumnDefinitions="*,Auto" Padding="20">
+<ContentPage 
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"  
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"  
+    xmlns:localization="clr-namespace:LocalizationResourceManager.Maui;assembly=LocalizationResourceManager.Maui"  
+    xmlns:shell="http://schemas.microsoft.com/dotnet/2021/maui"  
+    shell:Shell.NavBarIsVisible="False"  
+    x:Class="PCANAppM.Menu" 
+    BackgroundColor="Black">
+    
+    <Grid RowDefinitions="Auto,Auto,*,Auto" ColumnDefinitions="*,Auto" Padding="20">
 
         <!-- HEADER -->
-        <Grid Grid.Row="0" Grid.ColumnSpan="2" ColumnDefinitions="Auto,*,Auto">
-            <Image Source="oshkosh_logo.png"
-                   HeightRequest="40"
-                   VerticalOptions="Center" />
-            <ImageButton Grid.Column="2"
-                         Source="language_icon.png"
-                         HeightRequest="32"
-                         WidthRequest="32"
-                         BackgroundColor="Transparent"
-                         Clicked="OnLanguageButtonClicked"
-                         HorizontalOptions="End"
-                         VerticalOptions="Center" />
-        </Grid>
+        <Grid Grid.Row="0"  
+            Padding="15"  
+            ColumnDefinitions="Auto,*,Auto">
+            <!-- Oshkosh logo -->
+            <Image Source="oshkosh_logo.png"  
+           HeightRequest="65"  
+           WidthRequest="180"  
+           VerticalOptions="Center" />
 
-        <!-- TITLE + BUTTONS + IMAGES -->
-        <Grid Grid.Row="1" ColumnDefinitions="*,Auto" ColumnSpacing="20">
+            <!-- Language toggle -->
+            <ImageButton Grid.Column="2"  
+                 Source="language_icon.png"  
+                 HeightRequest="65"  
+                 WidthRequest="75"  
+                 BackgroundColor="Transparent"  
+                 Clicked="OnLanguageButtonClicked"  
+                 VerticalOptions="Center" />  
+        </Grid>  
 
-            <!-- Left Side -->
-            <VerticalStackLayout Spacing="24" VerticalOptions="Center">
-                <Label Text="Connect PCAN Device To..."
-                       FontSize="32"
-                       FontAttributes="Bold"
-                       TextColor="White"
-                       FontFamily="InriaSansRegular"
-                       HorizontalTextAlignment="Center"
-                       Margin="0,20,0,20" />
+        <!-- TITLE + BUTTONS + IMAGES -->  
+        <Grid Grid.Row="1" ColumnDefinitions="*,Auto" ColumnSpacing="20">  
 
-                <Button Text="Angle Sensor&#10;629-56345-004"
-                        TextColor="White"
-                        FontAttributes="Bold"
-                        FontSize="18"
-                        BackgroundColor="Transparent"
-                        BorderColor="White"
-                        BorderWidth="2"
-                        CornerRadius="30"
-                        HeightRequest="60"
+            <!-- Left Side -->  
+            <VerticalStackLayout Spacing="70" VerticalOptions="Center">  
+                <Label Grid.Row="1"  
+                       Grid.ColumnSpan="2"  
+                       Text="Connect PCAN Device To..."  
+                       FontSize="90"  
+                       FontAttributes="Bold"  
+                       FontFamily="BarlowRegular"  
+                       TextColor="White"  
+                       HorizontalTextAlignment="Center"  
+                       Margin="0,0,0,0" />  
+
+                <Button Text="{localization:Translate BAS}"  
+                        HorizontalOptions="Start"
+                        FontFamily="BarlowRegular"  
+                        TextColor="White"  
+                        FontAttributes="Bold"  
+                        FontSize="28"  
+                        BackgroundColor="Transparent"  
+                        BorderColor="White"  
+                        BorderWidth="5"  
+                        CornerRadius="50"  
+                        HeightRequest="100"  
+                        WidthRequest="600"
+                        Margin="100,0,0,0"
                         Clicked="OnBoomAngleSensorClicked" />
 
-                <Button Text="KZ Valve&#10;630-3056"
-                        TextColor="White"
-                        FontAttributes="Bold"
-                        FontSize="18"
-                        BackgroundColor="Transparent"
-                        BorderColor="White"
-                        BorderWidth="2"
-                        CornerRadius="30"
-                        HeightRequest="60"
+                <Button Text="{localization:Translate KZV}"   
+                        HorizontalOptions="Start"
+                        TextColor="White"  
+                        FontAttributes="Bold"  
+                        FontFamily="BarlowRegular"  
+                        FontSize="28"  
+                        BackgroundColor="Transparent"  
+                        BorderColor="White"  
+                        BorderWidth="5"  
+                        CornerRadius="50"  
+                        HeightRequest="100" 
+                        WidthRequest="600"
+                        Margin="100,0,0,0"
                         Clicked="OnKZValveClicked" />
 
-                <Button Text="Level Sensor&#10;631-4287-02X"
-                        TextColor="White"
+                <Button Text="{localization:Translate FTLS}" 
+                        HorizontalOptions="Start"
+                        TextColor="White"  
                         FontAttributes="Bold"
-                        FontSize="18"
-                        BackgroundColor="Transparent"
-                        BorderColor="White"
-                        BorderWidth="2"
-                        CornerRadius="30"
-                        HeightRequest="60"
-                        Clicked="OnFluidTankLevelSensorClicked" />
-            </VerticalStackLayout>
+                        FontFamily="BarlowRegular"  
+                        FontSize="28"  
+                        BackgroundColor="Transparent"  
+                        BorderColor="White"  
+                        BorderWidth="5"  
+                        CornerRadius="50"  
+                        HeightRequest="100"  
+                        WidthRequest="600"
+                        Margin="100,0,0,0"
+                        Clicked="OnFluidTankLevelSensorClicked" />  
+            </VerticalStackLayout> 
+        </Grid>  
 
-            <!-- Right Side Images -->
-            <VerticalStackLayout Grid.Column="1" Spacing="12" VerticalOptions="Center">
-                <Image Source="sensor1.png" HeightRequest="80" Aspect="AspectFit" />
-                <Image Source="sensor2.png" HeightRequest="80" Aspect="AspectFit" />
-                <Image Source="sensor3.png" HeightRequest="80" Aspect="AspectFit" />
-            </VerticalStackLayout>
-        </Grid>
-
-    </Grid>
+    </Grid>  
 </ContentPage>
